--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@
 # Visual Studio cache directory
 .vs/
 
+# Visual Studio Code
+.vscode/
+
+# Jetbrains Rider Cache
+.idea/
+
 # Gradle cache directory
 .gradle/
 
